Added service and controller for pets.

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=petsmobile.db"
+        "DefaultConnection": "petsmobile"
     }  
 }
