Created auth service.

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "petsmobile"
-    }  
+    },
+    "jwt": {
+
+    }
 }
