Added authorization and authentication. Finished backend.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,10 @@
     "ConnectionStrings": {
         "DefaultConnection": "petsmobile"
     },
-    "jwt": {
-
+    "Jwt": {
+        "Issuer": "https://skypuppy.pl",
+        "Audience": "https://skypuppy-client.pl",
+        "Key": "U5N2AmsNiBntGDXaRbnyjGzcSCR43oNS",
+        "AccessTokenExpirationMinutes": 15
     }
 }
