--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "petsmobile"
+        "DefaultConnection": "petsmobile",
+        "Prod": "Data Source=petsMobile.db"
     },
     "Jwt": {
         "Issuer": "https://skypuppy.pl",
